--- a/Rollers/Views/Info/Basics.cshtml
+++ b/Rollers/Views/Info/Basics.cshtml
@@ -4,7 +4,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
                         <h4>Learning the Basics</h4>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
                         
                             <div>
                                 <p align="justify">
@@ -45,7 +45,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -73,7 +73,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -101,7 +101,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -129,7 +129,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -157,7 +157,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
                         <center><h4>Trying Special Maneuvers</h4></center>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -201,7 +201,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -224,7 +224,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -247,7 +247,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -269,7 +269,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
                         <center><h4>Enhancing Your Skills</h4></center>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -305,7 +305,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -336,7 +336,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
