--- a/Rollers/Views/Info/Benefits.cshtml
+++ b/Rollers/Views/Info/Benefits.cshtml
@@ -4,7 +4,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
                         <h4>Top 10 Health Benefits of Roller Skating</h4>
                     </div>
                 </div>
@@ -18,7 +18,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
                         <ul icon="circle">
                             <li>
                                 <b>
