--- a/Rollers/Views/About/Index.cshtml
+++ b/Rollers/Views/About/Index.cshtml
@@ -3,7 +3,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="row text-center">
+                    <div class="row text-center text-light">
                         <h4>
                             We're Rollerblading assistant.
                             A helpful site focused on
