--- a/Rollers/Views/Info/Guide.cshtml
+++ b/Rollers/Views/Info/Guide.cshtml
@@ -3,7 +3,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="row text-center">
+                    <div class="row text-center text-light">
                         <h4>Buying Guide for Inline Skates</h4>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -39,7 +39,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -74,7 +74,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -95,7 +95,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -130,7 +130,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -159,7 +159,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -194,7 +194,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -237,7 +237,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -261,7 +261,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
@@ -284,7 +284,7 @@
         <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
             <div class="g-mb-15">
                 <div class="container">
-                    <div class="d-flex panel">
+                    <div class="d-flex panel text-light">
 
                         <div>
                             <p align="justify">
