--- a/Rollers/Views/Locations/CommentPartial.cshtml
+++ b/Rollers/Views/Locations/CommentPartial.cshtml
@@ -7,7 +7,7 @@
                 <div class="g-mb-15">
 
                     <div class="container">
-                        <div class="d-flex justify-content-end align-items-start">
+                        <div class="d-flex justify-content-end align-items-start text-light">
                             <button type="button"
                                     class="btn btn-link g-color-primary--hover"
                                     data-toggle="modal"
@@ -29,19 +29,19 @@
             <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
                 <div class="g-mb-15">
                     <div class="container">
-                        <div class="d-flex panel">
+                        <div class="d-flex panel text-light">
                             <div class="flex-grow-1">
                                 <h5 class="h5 g-color-gray-dark-v1 mb-0">
                                     @Model.User.FirstName @Model.User.LastName
                                 </h5>
                             </div>
                             <div>
-                                <span class="g-color-gray-dark-v4 g-font-size-12">@Model.CommentCreatedDateTime</span>
+                                <span class="g-color-gray-dark-v1 g-font-size-12">@Model.CommentCreatedDateTime</span>
 
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex text-light">
                         <div class="p-3"><br /><p>@Model.CommentText</p></div>
                     </div>
                 </div>
@@ -50,11 +50,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-6">
-                            <div class="d-flex panel">
+                            <div class="d-flex panel text-light">
                                 <div class="mr-auto">
                                     @if (Rollers.Utilities.Helpers.CommentHelper.HasToShowDeleteButton(Context.User.Claims, Model.UserId))
                                     {
-                                        <button type="button" id="show" class="btn btn-link g-color-primary--hover" onclick="$('#text_id_@Model.Id').toggle()">
+                                        <button type="button" id="show" class="btn btn-link g-color-gray-dark-v1 g-color-primary--hover" onclick="$('#text_id_@Model.Id').toggle()">
                                             <i><img src="~/img/pen.png" width="12" alt=""></i>
                                             Edit
                                         </button>
@@ -81,11 +81,11 @@
                             <div class="d-flex panel">
                                 <div class="mr-auto"></div>
                                 <div class="item item-pink"></div>
-                                <div class="row">
-                                    <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" onclick="addlikes(@Model.Id)">
+                                <div class="row text-light">
+                                    <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" onclick="addlikes(@Model.Id)">
                                         <div id="@Model.Id-likes-number" class="fa fa-thumbs-up g-pos-rel g-top-1"> @Model.Likes </div>
                                     </a><pre> </pre>
-                                    <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" onclick="adddislikes(@Model.Id)">
+                                    <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" onclick="adddislikes(@Model.Id)">
                                         <div id="@Model.Id-dislikes-number" class="fa fa-thumbs-down g-pos-rel g-top-1"> @Model.Dislikes</div>
                                     </a>
                                 </div>
