--- a/Rollers/Views/Locations/DeleteCommentPartial.cshtml
+++ b/Rollers/Views/Locations/DeleteCommentPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="modal fade" id="popup_delete_comment_@Model.Id.ToString()" tabindex="-1" role="dialog" aria-labelledby="Delete this comment" aria-hidden="true" style="display:none">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content" style="background-color:#343a40">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel"><p>Do you really wanna delete this comment?</p></h5>
+                <h5 class="modal-title text-light" id="exampleModalLabel"><p>Do you really wanna delete this comment?</p></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -10,36 +10,62 @@
 
 
             <div class="modal-body">
-                <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
-                    <div class="g-mb-15">
-                        <div class="d-flex flex-nowrap">
-                            <div class="d-flex justify-content-start">
-                                <div class="order-0 p-2"><h5 class="h5 g-color-gray-dark-v1 mb-0">@Model.User.FirstName  @Model.User.LastName</h5></div>
+                <div class="col-md-12">
+                    <div class="media g-mb-15 media-comment" id="comment-body">
+                        <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
+                            <div class="g-mb-15">
+                                <div class="container">
+                                    <div class="d-flex panel text-light">
+                                        <div class="flex-grow-1">
+                                            <h5 class="h5 g-color-gray-dark-v1 mb-0">
+                                                @Model.User.FirstName @Model.User.LastName
+                                            </h5>
+                                        </div>
+                                        <div>
+                                            <span class="g-color-gray-dark-v1 g-font-size-12">@Model.CommentCreatedDateTime</span>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="d-flex text-light">
+                                    <div class="p-3"><br /><p>@Model.CommentText</p></div>
+                                </div>
                             </div>
-                            <div class="d-flex justify-content-end">
-                                <div class="order-1 p-2"><span class="g-color-gray-dark-v4 g-font-size-12">@Model.CommentCreatedDateTime</span></div>
+
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12 col-lg-6">
+                                        <div class="d-flex panel">
+                                            <div class="mr-auto"></div>
+                                            <div class="item item-pink"></div>
+                                            <div class="item item-red "></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-12 col-lg-6">
+                                        <div class="d-flex panel">
+                                            <div class="mr-auto"></div>
+                                            <div class="item item-pink"></div>
+                                            <div class="row text-light">
+                                                <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" onclick="addlikes(@Model.Id)">
+                                                    <div id="@Model.Id-likes-number" class="fa fa-thumbs-up g-pos-rel g-top-1"> @Model.Likes </div>
+                                                </a><pre> </pre>
+                                                <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" onclick="adddislikes(@Model.Id)">
+                                                    <div id="@Model.Id-dislikes-number" class="fa fa-thumbs-down g-pos-rel g-top-1"> @Model.Dislikes</div>
+                                                </a>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+
+                                </div>
                             </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="p-2"><br /><p>@Model.CommentText</p></div>
+
+
                         </div>
                     </div>
-
-
-                    <ul class="list-inline d-sm-flex my-0">
-                        <li class="list-inline-item g-mr-20">
-                            <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover">
-                                <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
-                                @Model.Likes
-                            </a>
-                        </li>
-                        <li class="list-inline-item g-mr-20">
-                            <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover">
-                                <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
-                                @Model.Dislikes
-                            </a>
-                        </li>
-                    </ul>
                 </div>
             </div>
             <div class="modal-footer">
