--- a/Rollers/Views/Locations/Locations.cshtml
+++ b/Rollers/Views/Locations/Locations.cshtml
@@ -5,7 +5,7 @@
     ViewData["GoogleApiKey"] = Model.GoogleApiKey;
 }
 
-<div class="row p-3 align-items-center justify-content-center">
+<div class="row p-3">
     <div class="col-4">
         <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#add-new-location-popup">
             Add Location
