--- a/Rollers/wwwroot/css/site.css
+++ b/Rollers/wwwroot/css/site.css
@@ -7,7 +7,7 @@
 body {
     margin-top: 0px;
     background-image: url('https://wallpapercave.com/wp/wp3146629.jpg');
-    background-repeat: repeat;
+    background-attachment: fixed;
 }
 
 
@@ -58,7 +58,7 @@ body {
 }
 
 .g-bg-secondary {
-    background-color: #fafafa !important;
+    background-color: #343a40 !important;
 }
 
 .u-shadow-v18 {
@@ -66,7 +66,7 @@ body {
 }
 
 .g-color-gray-dark-v4 {
-    color: #777 !important;
+    color: #343a40 !important;
 }
 
 .g-font-size-12 {
