--- a/Rollers/Views/Shared/_LoginPartialModal.cshtml
+++ b/Rollers/Views/Shared/_LoginPartialModal.cshtml
@@ -36,7 +36,7 @@
                             <a class="nav-link active" id="log-in-tab" data-toggle="tab" href="#log-in" role="tab" aria-controls="log-in" aria-selected="true">Log in</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="sign-in-tab" data-toggle="tab" href="#sign-in" role="tab" aria-controls="sing-in" aria-selected="false">Sing in</a>
+                            <a class="nav-link" id="sign-in-tab" data-toggle="tab" href="#sign-in" role="tab" aria-controls="sing-in" aria-selected="false">Sign in</a>
                         </li>
                     </ul>
                     <div class="tab-content" id="myTabContent">
