--- a/Rollers/Views/Locations/LocationPartial.cshtml
+++ b/Rollers/Views/Locations/LocationPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="card text-center border-dark bg-dark border-light text-light m-1" style="width: 30rem">
     <div class="card-header">
 
-        @if (Rollers.Utilities.Helpers.CommentHelper.HasToShowDeleteButton(Context.User.Claims, Model.UserId))
+        @if (Rollers.Utilities.Helpers.CommentHelper.HasToShowForUserId(Context.User.Claims, Model.UserId))
         {
             <div class="d-flex justify-content-between">
                 <div class="p-2"></div>
